kotlin-ide/idea/testData/gradle/newMultiplatformHighlighting/first/src/commonMain/kotlin/My.kt
expect class <lineMarker descr="Has actuals in JVM"><error descr="[NO_ACTUAL_FOR_EXPECT] Expected class 'My' has no actual declaration in module first.jsMain for JS" textAttributesKey="ERRORS_ATTRIBUTES">My</error></lineMarker> {
    fun <lineMarker descr="Has actuals in JVM">foo</lineMarker>()
}